--- a/design.css
+++ b/design.css
@@ -33,9 +33,10 @@ span {
 #intro {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   width: 40%;
   text-align: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 #intro > img {
@@ -54,9 +55,15 @@ span {
 }
 
  #chunk-container > img {
-  max-width: 30%;
-  height: 100%;
-  border-radius: 50%;
+   max-width: 35%;
+   border-radius: 50%;
+   margin-top: 1%;
+   -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+   transform: rotate(90deg);
+
 }
 
 #intro-container {
@@ -91,10 +98,7 @@ font-size: 40px;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
-  margin: none;
-  padding: none;
-  height: 500px;
-  overflow: scroll;
+  margin-bottom: 50px;
 }
 
 #projects-container > h1 {
@@ -159,8 +163,9 @@ font-size: 40px;
 }
 
 #animation > img {
-  width: 30%;
-  height: 90%;
+  width: 350px;
+  height: 95%;
+  border-radius: 2%;
 }
 
 .ani-talk {
@@ -245,4 +250,12 @@ a:active {
 
 .icon--ei-sc-facebook {
   fill: white;
+}
+
+.icon {
+  fill: black;
+}
+
+.icon:hover {
+  fill: #D66853;
 }
